; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/sb/extr_sb_common.c_snd_sbdsp_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/sb/extr_sb_common.c_snd_sbdsp_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_sb = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_sb*)* @snd_sbdsp_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_sbdsp_free(%struct.snd_sb* %0) #0 {
  %2 = alloca %struct.snd_sb*, align 8
  store %struct.snd_sb* %0, %struct.snd_sb** %2, align 8
  %3 = load %struct.snd_sb*, %struct.snd_sb** %2, align 8
  %4 = getelementptr inbounds %struct.snd_sb, %struct.snd_sb* %3, i32 0, i32 3
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.snd_sb*, %struct.snd_sb** %2, align 8
  %9 = getelementptr inbounds %struct.snd_sb, %struct.snd_sb* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @release_and_free_resource(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.snd_sb*, %struct.snd_sb** %2, align 8
  %14 = getelementptr inbounds %struct.snd_sb, %struct.snd_sb* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp sge i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %12
  %18 = load %struct.snd_sb*, %struct.snd_sb** %2, align 8
  %19 = getelementptr inbounds %struct.snd_sb, %struct.snd_sb* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.snd_sb*, %struct.snd_sb** %2, align 8
  %22 = bitcast %struct.snd_sb* %21 to i8*
  %23 = call i32 @free_irq(i64 %20, i8* %22)
  br label %24

24:                                               ; preds = %17, %12
  %25 = load %struct.snd_sb*, %struct.snd_sb** %2, align 8
  %26 = call i32 @kfree(%struct.snd_sb* %25)
  ret i32 0
}

declare dso_local i32 @release_and_free_resource(i64) #1

declare dso_local i32 @free_irq(i64, i8*) #1

declare dso_local i32 @kfree(%struct.snd_sb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
